# concert-catalogue

./: CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  KonzertKatalog.spec  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: pr-checks.yml  release.yml
.nicegui/: storage-user-7966ef7b-0d47-44a0-b98a-6b1c8842a1f8.json
app/: database.py  i18n.py  seeds.py  utils.py  version.py
app/models/: __init__.py  attachment.py  concert.py  orchestra.py  person.py  piece.py  setting.py  venue.py
app/services/: concert_service.py  orchestra_service.py  person_service.py  piece_service.py  search_service.py  settings_service.py  venue_service.py
app/storage/: file_handler.py
app/views/: concert_detail.py  concert_form.py  concerts_list.py  reference_data.py  search.py
data/: konzert.db
scripts/: create_seed_db.py
tests/: conftest.py
tests/e2e/: conftest.py  helpers.py  test_basic.py  test_concert_e2e.py  test_reference_data_e2e.py  test_search_e2e.py
tests/models/: test_models.py
tests/services/: test_concert_scenarios.py  test_concert_service.py  test_person_service.py  test_piece_service.py  test_search_service.py
tests/views/: test_concert_detail.py  test_reference_data.py
