[project]
name = "konzertkatalog"
version = "0.3.0"
description = "Personal classical concert archive"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.0",
    "nicegui>=3.9.0",
    "pywebview>=6.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["F821"]  # SQLAlchemy forward references under `from __future__ import annotations`

[tool.pytest.ini_options]
testpaths = ["tests"]
